fix: removeLast in deleteLastEntry replaced with remove